# Diffusion-Models

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
diffusion_models/: __init__.py  config.py  dataset.py  features.py  plots.py
diffusion_models/modeling/: __init__.py  predict.py  train.py  unet.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-mar1k-diffusion-models-from-scratch.ipynb
tests/: test_data.py
