[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diffusion-models"
version = "0.1.0"
description = "Diffusion Models from scratch"
readme = "README.md"
authors = [
    { name = "mar1k123" }
]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.21.0",
    "matplotlib>=3.7.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diffusion_models*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]